# shell-rs

./: Cargo.toml  README.md  default_config.toml
commands/cd/: Cargo.toml  lib.rs
commands/ls/: Cargo.toml  clap_args.rs  lib.rs
commands/pwd/: Cargo.toml  lib.rs
common/: Cargo.toml  commands.rs  helpers.rs  lib.rs
config/: Cargo.toml
shell/: Cargo.toml  builtin.rs  exec.rs  main.rs  prompt.rs  shell.rs
src/: builtin.rs  config.rs  main.rs  prompt.rs  shell.rs
